@@ -13,4 +13,4 @@ void b(void)
   a();
 }
 
-extern int c __attribute__((weak_import)); /* { dg-warning "ignored" } */
+/* APPLE LOCAL put in 4.1 */
